--- a/net/ghostscript/Makefile
+++ b/net/ghostscript/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ghostscript
-PKG_VERSION:=10.03.0
-PKG_VERSION_LIBDIR:=10.03.0
+PKG_VERSION:=10.03.1
+PKG_VERSION_LIBDIR:=10.03.1
 PKG_RELEASE:=7
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs10030/$(PKG-SOURCE)
-PKG_MD5SUM:=a79785634fcb27f121de06421b1c68bc
+PKG_SOURCE_URL:=https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/10.03.1/$(PKG-SOURCE)
+PKG_MD5SUM:=01c515f190de2d8dcce4767407720855
 
 PKG_BUILD_DEPENDS:=ghostscript/host
 PKG_INSTALL:=1
