--- a/net/cups/Makefile
+++ b/net/cups/Makefile
@@ -8,13 +8,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=cups
-PKG_VERSION:=2.3.3
+PKG_VERSION:=2.4.16
 PKG_RELEASE:=4
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-source.tar.gz
 PKG_SOURCE_URL:= \
-	http://github.com/apple/cups/releases/download/v$(PKG_VERSION)
-PKG_MD5SUM:=412434ceefbdf3ec71bc9188a035f589
+	http://github.com/OpenPrinting/cups/releases/download/v$(PKG_VERSION)
+PKG_MD5SUM:=53cccb5d69eaed7e4c6fe66fa12b11c4
 
 TARGET_LDFLAGS+=-Wl,-rpath-link=$(STAGING_DIR)/usr/lib
 
@@ -349,6 +349,7 @@ define Build/Configure
 		--without-perl \
 		--without-python \
 		--without-php \
+		--without-tls \
 		--enable-shared \
 		--enable-image \
 		--enable-libusb \
@@ -358,12 +359,11 @@ define Build/Configure
 		--disable-ldap \
 		--disable-pam \
 		--enable-slp \
-		--disable-gnutls \
-		--disable-openssl \
 		--disable-cdsassl \
 		--disable-ssl \
 		--disable-gssapi \
 		--disable-tiff \
+		--libdir=/usr/lib \
 		--with-pdftops=/usr/bin/gs, \
 		UNAME="Linux" \
 		LIBS="$(TARGET_LDFLAGS) -lz -lpng -ljpeg" \
